# Sudoku-C-Summer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: release.yml
include/: board.h  generator.h  solver.h  solver_ga.h  solver_sa.h  ui.h
src/: CMakeLists.txt  board.c  generator.c  main.c  solver.c  solver_ga.c  solver_sa.c  ui.c
